# deep-research

./: .env.example  .gitignore  .gitmodules  00_app.py  00_original_app.py  01_qwen_eval_gradio_parallel_openrouter.py  01_qwen_eval_gradio_parallel_vllm_local.py  01_qwen_eval_gradio_parallel_vllm_local_no_think_with_log.py  01_qwen_eval_gradio_parallel_vllm_local_no_think_with_log_tavily.py  01_qwen_eval_gradio_parallel_vllm_local_with_log.py  01_qwen_eval_gradio_sequantial_vllm_local_with_log_for_debug.py  03_grade_answers.py  03_grade_answers_webwalker.py  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements_eval.txt  requirements_gguf.txt  requirements_vllm.txt  serve_deepresearch_model.sh  train.sh  train_grpo.sh  train_smoketest.sh
configs/: zero3.json  zero3.yaml  zero3_low_mem.json
deploy/: requirements.txt
docs/: _config.yml  git-workflow.md  index.md
graveyard/: 01_qwen_eval_gradio_parallel_vllm_local.py  02_concat_csv.py  README_SIMPLE_API.md  README_TGI.md  README_TGI_LOCAL.md  app-backup.py  app.py  download_webwalkerqa_as_csv.py  eval_qwen.py  invoke_vllm.py  load_trained_14b_model_hf_api.py  load_trained_14b_model_local.py  load_trained_14b_model_local_8x.py  serve_model.py  serve_model_local.py  simple_api_server.py  simple_qwen_chat.py  tavily_101.ipynb
notebooks/: 250410_cook_better_data.ipynb  250515_check_recall_data.ipynb
scripts/: README.md  check_data.py  download_checkpoint.py  kill_gpus.sh  run_flashrag_server.sh  run_mock_retriever_server.sh  run_sandbox_server.sh  run_simple_retriever_server.sh  run_vllm_server.sh  simple_research_cli.py  text_web_browser.py  upload_checkpoint.py
src/: __init__.py  agent.py  config.py  demo_app.py  embeddings.py  evaluate_agent.py  flashrag_server.py  index_builder.py  knowledge_base.py  preprocess_musique.py  prompts.py  rewards.py  (+5 more)
(+68 files in other folders)
