[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "loguru>=0.7.3",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.8",
    "transformers==4.49.0",
    "trl>=0.17.0",
    "vllm==0.7.2",
]
